# home-indeed

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  INSTALL.md  README.md  buildspec.json
.github/actions/build-plugin/: action.yaml
.github/actions/package-plugin/: action.yaml
.github/scripts/: Build-Windows.ps1  Package-Windows.ps1  build-ubuntu  package-ubuntu
.github/workflows/: build-project.yaml  check-format.yaml  push.yaml
Home-Indeed-Waitlist/: index.html  robots.txt  sitemap.xml  styles.css
cmake/macos/resources/: create-package.cmake.in
cmake/windows/: defaults.cmake
data/: diag_db.py  homein-lyrics.db  inspect_bible_schema.py
src/: plugin-main.cpp  resources.qrc
src/audio/: homein-audio.cpp  homein-audio.hpp  homein-resampler.hpp
src/database/: homein-db.cpp  homein-db.hpp  homein-importer.cpp  homein-importer.hpp  homein-lyrics-db.cpp  homein-lyrics-db.hpp
src/detection/: homein-context.hpp  homein-lyrics-engine.cpp  homein-lyrics-engine.hpp  homein-ref-parser.cpp  homein-ref-parser.hpp
src/dock/: homein-dock.cpp  homein-dock.hpp  homein-wizard.cpp  homein-wizard.hpp
src/installer/: homein-installer.cpp  homein-installer.rc  homein-uninstaller.cpp  installer.manifest  resources.qrc
src/network/: homein-http.cpp  homein-http.hpp
src/renderer/: homein-renderer.cpp  homein-renderer.hpp
src/stt/: ISTTProvider.hpp  homein-deepgram.cpp  homein-deepgram.hpp  homein-stt.cpp  homein-stt.hpp  homein-transcript-queue.hpp  homein-vosk.cpp  homein-vosk.hpp  homein-whisper.cpp  homein-whisper.hpp
src/tabs/: homein-bible-tab.cpp  homein-bible-tab.hpp  homein-lyrics-tab.cpp  homein-lyrics-tab.hpp  homein-queue-tab.cpp  homein-queue-tab.hpp  homein-settings-tab.cpp  homein-settings-tab.hpp  homein-transcript-tab.cpp  homein-transcript-tab.hpp
src/updater/: homein-updater.cpp  homein-updater.hpp
tests/: test-database.cpp  test-resampler.cpp
tools/: build-bible-db.py  bulk-import-lyrics.py  import-lyrics.py  init-lyrics-db.py  verify-db.py
